# CHyM-roff

./: CITATION.cff  Makefile  Makefile.am  README.md  acinclude.m4  chymini.inp  config.h  configure.ac  main.f90  makeinc  mod_global.f90  mod_iface.F90  mod_iface.f90  mod_io.F90  mod_io.f90  mod_model.F90  mod_model.f90  mod_mpimess.f90  mod_param.F90  mod_param.f90  mod_time.f90  mod_varandtypes.f90  preproc.namelist
grid/: Readme.md  cleanmask.py  create_rivernet.py  createmask_ll.py  extend_mask.py  interpolate.py  makedem.py  makegrid.py  makegrid.yaml  makemaskll.py
preproc/: Makefile  Makefile.am  mod_cellaut.F90  mod_common.F90  mod_crtstat.F90  mod_ncio.F90  mod_param.F90  mod_rivernet.F90  mod_vector.F90  preproc.F90
run/: chymini.inp  chymroff.namelist  chymroff_era5.namelist  plot.py  preproc.namelist
run/input/global/: download.py
